  - VER /R now shows DOSBox-X's Git commit SHA1, in
    addition to the build date and other version
    information shown by the VER command. (Wengier)
  - Fixed that joystick may not work with the setting
    "usescancodes=auto" when a non-US keyboard layout
    is activated on the SDL1 build. (Wengier)
  - Added "Drive information" menu item under "Drive"
    to show the information for the drive. (Wengier)
  - The command "Swap CD" now swaps only CD drives (as
    the name), not all non-floppy drives. Also added
    "Swap disk" menu item under the "Drive" menu for
    swapping individual mounted drives. (Wengier)
  - Fixed unmounting swap disks when unmounting drives
    with MOUNT or IMGMOUNT command. (Wengier)
  - Fixed possible failure when mounting .VHD images,
    and the issue that leading colon (:) or read-only
    marker may not work for such images. (Wengier)
  - IMGMOUNT command without parameters now shows the
    disk position and number of swap disks, as well as
    the IDE controller (if applicable). (Wengier)
  - Add "-ro" option for IMGMOUNT command to mark all
    disk imaages as read-only at once. (Wengier)
  - Added option to the Windows installer which allows
    to automatically upgrade the DOSBox-X config file
    (dosbox-x.conf) to the latest version format while
    keeping the current user settings. Also added the
    option to add the context menu for executables and
    folders in the Windows Explorer. (Wengier)
  - The default value for "output" (in "sdl" section)
    is now "default", which will default to the value
    according to your platform. (Wengier)
  - MOUNT command's -Q (quiet) option now silences
    virtually all output of this command. (Wengier)
  - Worked around the mounting issue with LaunchBox,
    by allowing a mounting command-line with single
    quotes like MOUNT C 'X:\DOS' on Windows. (Wengier)
  - Unmounting ISO drives will auto-unmount associated
    El Torito floppy drives (if any) too. (Wengier)